[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/AudioSettings.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/menu/Settings.gd" type="Script" id=4]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_top = 60.0
margin_right = 360.0
margin_bottom = 580.0
rect_min_size = Vector2( 360, 520 )

[node name="AudioSettings" parent="Panel" instance=ExtResource( 2 )]
margin_left = 80.0
margin_top = 100.0
margin_right = 296.0
margin_bottom = 184.0

[node name="TrainSettings" type="VBoxContainer" parent="Panel"]
margin_left = 20.0
margin_top = 260.0
margin_right = 332.0
margin_bottom = 344.0

[node name="Time" type="HBoxContainer" parent="Panel/TrainSettings"]
margin_right = 320.0
margin_bottom = 40.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="Panel/TrainSettings/Time"]
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 260, 40 )
text = "Hide Timer in Training"
align = 1
valign = 1

[node name="HideTime" type="CheckButton" parent="Panel/TrainSettings/Time"]
margin_left = 272.0
margin_right = 320.672
margin_bottom = 40.0

[node name="Move" type="HBoxContainer" parent="Panel/TrainSettings"]
margin_top = 44.0
margin_right = 320.0
margin_bottom = 84.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="Panel/TrainSettings/Move"]
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 260, 40 )
text = "Hide Moves in Training"
align = 1
valign = 1

[node name="HideMove" type="CheckButton" parent="Panel/TrainSettings/Move"]
margin_left = 272.0
margin_right = 320.672
margin_bottom = 40.0

[connection signal="toggled" from="Panel/TrainSettings/Time/HideTime" to="." method="_on_HideTime_toggled"]
[connection signal="toggled" from="Panel/TrainSettings/Move/HideMove" to="." method="_on_HideMove_toggled"]
